# mcp-fs-server

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
example/: README.md  prompt.py  sse_example.py  stdio_example.py
src/mcp_fs/: launcher.py  server.py
src/mcp_fs/config/constants/: grep_ignore_dirs.py
src/mcp_fs/resources/: sample_resource.py
src/mcp_fs/tools/: directory_tools.py  file_tools.py  search_tools.py
src/mcp_fs/utils/: path_utils.py
