[project]
name = "mcp-fs-server"
version = "0.1.0"
description = "Filesystem MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "easy-mcp",
]

[build-system]
requires = ["setuptools>61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
easy-mcp = { path = "../easy-mcp" }

