[project]
name = "mcp-fs"
version = "0.1.0"
description = "Filesystem MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.9.0",
    "openai>=1.79.0",
    "openai-agents>=0.0.15",
]

[build-system]
requires = ["setuptools>61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
]

